Closed Bug 200139 Opened 23 years ago Closed 23 years ago

htmlparser has way too many tables

Categories

(Core :: DOM: HTML Parser, defect, P2)

defect

Tracking

()

RESOLVED FIXED
mozilla1.4beta

People

(Reporter: alecf, Assigned: alecf)

Details

(Keywords: memory-footprint, Whiteboard: fix in hand)

Attachments

(1 file)

nsHTMLEntities.cpp defines way too many tables, and allocates a whole bunch of them for no good reason. Attached is a fix, which includes lots of const-ness which sfraser will be happy about.
this cleans up a lot of junk.
Comment on attachment 119079 [details] [diff] [review] clean up nsAVLTree, and entities simon/harish, can I get some reviews? this is really an easy one.
Attachment #119079 - Flags: superreview?(sfraser)
Attachment #119079 - Flags: review?(harishd)
Status: NEW → ASSIGNED
Priority: -- → P2
Whiteboard: fix in hand
Target Milestone: --- → mozilla1.4beta
Comment on attachment 119079 [details] [diff] [review] clean up nsAVLTree, and entities Bonus points if you rename all the 'comparitor' to 'comparator'.
Attachment #119079 - Flags: superreview?(sfraser) → superreview+
Comment on attachment 119079 [details] [diff] [review] clean up nsAVLTree, and entities r=harishd
Attachment #119079 - Flags: review?(harishd) → review+
that was easy. fixed.
Status: ASSIGNED → RESOLVED
Closed: 23 years ago
Resolution: --- → FIXED
Note that EntityNode constructor/destructor stuff gets counted (via MOZ_COUNT_CTOR/DTOR), and since the static array is never eliminated, this patch makes us look like we're leaking tons of EntityNode objects....
just to follow up, when the patch was re-landed, I removed all the COUNT_CTOR/COUNT_DTOR stuff.. the only EntityNodes that get created beyond the static const list are on the stack, when doing a search of the nsAVLTrees (and yeah yeah, I'm working on getting rid of the nsAVLTrees)
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: