fix for bug 200139 - nsHTMLEntities has way too many static tables - switch everying over to "const" and stop allocating copies of static data r=harishd, sr=sfraser (oh, and spelling update: Comparitor -> Comparator)